2023-08-28 Jan Kotanski <jankotan@gmail.com>
	* cure endTime and creationTime in nxsfileinfo metadata (#511)
	* tagged as v3.49.0

2023-08-28 Jan Kotanski <jankotan@gmail.com>
	* update nxsfileinfo metadata and attachament for new nestjs scicat backend (#506, #508)
	* tagged as v3.48.0

2023-07-05 Jan Kotanski <jankotan@gmail.com>
	* fix names in defaultsignal and defaultaxes (#503)
	* add defaultattrs to axesnames (#503)
	* tagged as v3.47.2

2023-06-30 Jan Kotanski <jankotan@gmail.com>
	* remove printouts from add-recorder-path (#500)
	* tagged as v3.47.1

2023-06-05 Jan Kotanski <jankotan@gmail.com>
	* add --depends for nxscreate comp (#495)
	* tagged as v3.47.0

2023-04-05 Jan Kotanski <jankotan@gmail.com>
	* add maxonedsize option to nxsfileinfo metadata (#487, #489)
	* tagged as v3.46.0

2023-03-27 Jan Kotanski <jankotan@gmail.com>
	* set the SciCat PI as the DESY beamtime applicant (#484)
	* tagged as v3.45.1

2023-03-27 Jan Kotanski <jankotan@gmail.com>
	* add optional btmdmap values (#481)
	* tagged as v3.45.0

2023-03-14 Jan Kotanski <jankotan@gmail.com>
	* get the default secop component name from equipment_id  (#478)
	* rearrange name, short_name, description and type of node values (#478)
	* tagged as v3.44.0

2023-03-13 Jan Kotanski <jankotan@gmail.com>
	* create physical secop environment links only with the related sensor (#475)
	* add --strict option to nxscreate secopcp (#475)
	* add --transformation-attributes options to nxscreate secopcp (#473)
	* add --environments  --links and  --first options to nxscreate secopcp (#472)
	* split a scan command text in the dataset attachment if it is too long (#471)
	* tagged as v3.43.0

2023-02-27 Jan Kotanski <jankotan@gmail.com>
	* move left, right, top, bottom of NXslit to the NXtransformations (#469)
	* tagged as v3.42.3

2023-02-27 Jan Kotanski <jankotan@gmail.com>
	* change fio date to iso format (#466)
	* tagged as v3.42.2

2023-02-24 Jan Kotanski <jankotan@gmail.com>