@@ -1,0 +1,33 @@
+!
+! Comments
+!
+%c
+ascan br1_mono 0.0 10.0 10 0.1
+user jkotan Acquisition started at Wed Sep  6 13:55:57 2023
+!
+! Parameter
+!
+%p
+!
+! Data
+!
+%d
+ Col 1 br1_mono DOUBLE
+ Col 2 exp_t01 DOUBLE
+ Col 3 exp_c04 DOUBLE
+ Col 4 exp_c06 DOUBLE
+ Col 5 exp_c08 DOUBLE
+ Col 6 exp_c07 DOUBLE
+ Col 7 timestamp DOUBLE
+ 0.0 0.1 14.732533283705282 0.5056792726672004 2.3968917996844405 65.51354026298935 4.899275064468384
+ 1.0 0.1 37.90137103824761 2.575479279421102 11.894619363870545 130.23454072710226 5.415067195892334
+ 2.0 0.1 74.55996151510429 10.473247595616652 41.69199682040006 159.5871241930714 5.954235315322876
+ 3.0 0.1 112.27421456408086 30.7434417154116 102.83445112985464 120.54991194916433 6.486492395401001
+ 4.0 0.1 129.2125038522443 65.14969236691545 179.1897317696581 56.27118002301598 6.998931169509888
+ 5.0 0.1 113.80204184223868 99.74448856481561 220.16474885332568 16.133630326002436 7.495767593383789
+ 6.0 0.1 76.59268668035972 110.43152645125261 190.94193642177532 2.8300016798209913 8.024483680725098
+ 7.0 0.1 39.41549031693062 88.29762848697378 116.75807632084764 0.3502741244231648 8.54751968383789
+ 8.0 0.1 15.574645649802536 51.07203162361925 50.37247339139513 0.05476603619391991 9.078600883483887
+ 9.0 0.1 0.01453845877993189 0.030456293775339382 38.97239262256111 29.113480140737572 9.618422746658325
+ 10.0 0.1 0.04754844517364082 -0.02475672579468246 76.57296424572048 48.75234221274684 10.172634363174438
+! Acquisition ended at Wed Sep  6 13:56:07 2023
