@@ -1,5 +1,6 @@
-2023-08-28 Jan Kotanski <jankotan@gmail.com>
+2023-09-08 Jan Kotanski <jankotan@gmail.com>
 	* cure endTime and creationTime in nxsfileinfo metadata (#511)
+	* fix nxsfileinfo attachment from fio with empty parameters (#513)
 	* tagged as v3.49.0
 
 2023-08-28 Jan Kotanski <jankotan@gmail.com>
